# Example-Runner

./: Cargo.toml  README.md  dist-workspace.toml
crates/example-gui/: Cargo.toml
crates/example-runner-cli/: Cargo.toml
crates/example-runner-cli/src/: cargo_metadata_async.rs  config_args.rs  example_config.rs  execute_examples.rs  main.rs  read_example_configuration.rs  struct_merge.rs  templates.rs
crates/example-runner-core/: Cargo.toml
crates/example-runner-core/src/: async_metadata.rs  lib.rs
crates/example-runner-core/src/examples/: example.rs  mod.rs  path.rs
crates/rust-metadata/: Cargo.toml
crates/rust-metadata/src/cargo/: mod.rs  package_id.rs
