[package]
name = "example-runner-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.9"
