[package]
name = "rust-metadata"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
futures = { workspace = true, optional = true }
miette = { workspace = true }
nom = "7.1.3"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[features]
cargo = []
async = ["dep:futures"]
